[gd_scene load_steps=5 format=3 uid="uid://def72c5ui1508"]

[ext_resource type="Script" path="res://database/parts/SimpleProjectile.gd" id="1_g8o00"]
[ext_resource type="Texture2D" uid="uid://stgxl8nglmsh" path="res://assets/images/mechas/projectiles/bullet_small.png" id="3_sawh8"]
[ext_resource type="Texture2D" uid="uid://c5biylaxbd3px" path="res://assets/images/light_sources/light_point_soft.png" id="4_lgmd3"]

[sub_resource type="CanvasItemMaterial" id="1"]
blend_mode = 1

[node name="Projectile" type="Area2D" groups=["projectile"]]
collision_layer = 2
script = ExtResource("1_g8o00")
light_energy = 0.1
muzzle_speed = 11600
base_damage = 182
shield_mult = 0.5
heat_damage = 3.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 24)
scale = Vector2(1, 1.96)
texture = ExtResource("3_sawh8")

[node name="LightEffect" type="Sprite2D" parent="Sprite2D"]
material = SubResource("1")
scale = Vector2(5, 5)
texture = ExtResource("4_lgmd3")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-4, -21, 4, -21, 3, 15, -3, 15)

[node name="LifeTimer" type="Timer" parent="."]

[connection signal="body_shape_entered" from="." to="." method="_on_Projectile_body_shape_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
